tests/models/enum/named/u32/fail/min_length.stderr
error: Support condition is gt, ge, lt, le, alias, default and validate
 --> tests/models/enum/named/u32/fail/min_length.rs:6:9
  |
6 |         value: u32
  |         ^^^^^
